Use key [verb] to properly document \__fp_parse_infix_,:N

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -2231,7 +2231,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]+\@@_parse_infix_,:N+
+% \begin{macro}[aux, verb, EXP]{\__fp_parse_infix_,:N}
 %    \begin{macrocode}
 \group_begin:
   \char_set_catcode_letter:N \,
